# finex

./: .gitignore  README.md  can_init.sh  run_control.sh  run_sensors.sh
bags/2024-04-11.13:14:08/: 2024-04-11.13:14:08_0.db3
bags/2024-05-22.14:27:24/: 2024-05-22.14:27:24_0.db3  metadata.yaml
bags/backToStart_marta/: 2024-05-22.13:12:09_0.db3
install/: local_setup.sh  setup.sh
install/reflex-control-cpp/lib/reflex-control-cpp/: control_node
install/reflex-control-cpp/share/reflex-control-cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/reflex-exo/lib/reflex-exo/: control_node  sensor_node.py
install/reflex-exo/share/reflex-exo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/reflex-exo/share/reflex-exo/cmake/: reflex-exoConfig.cmake
install/reflex-ros2/share/reflex-ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/reflex-therapy/share/reflex-therapy/: package.bash  package.zsh
install/reflex_readings_py/lib/reflex_readings_py/: sensor_node
install/reflex_readings_py/share/reflex_readings_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
sensor_tests/: can_test.py
src/finex/: CMakeLists.txt  package.xml
src/finex/include/finex/: Controller.hpp  SPI.hpp
src/finex/scripts/: sensor_node.py
src/finex/src/: control_node.cpp
src/finex/src/finex/: Controller.cpp  SPI.cpp
src/finex/utils/: can_rpi.py
src/finex_gui/: CMakeLists.txt  package.xml
src/finex_gui/include/finex_gui/: FinexInterface.hpp
src/finex_gui/resources/: FinexInterface.ui
src/finex_gui/src/: interface_node.cpp
src/finex_gui/src/finex_gui/: FinexInterface.cpp
src/reflex-control-cpp/: CMakeLists.txt
src/reflex-control-cpp/include/reflex-control-cpp/: control_node.hpp
src/reflex-control-cpp/src/: control_node.cpp
src/reflex-exo/: CMakeLists.txt  package.xml
src/reflex-exo/include/reflex-exo/: Controller.hpp  SPI.hpp  control_node.hpp
src/reflex-exo/reflex-exo/: sensor_module.py
src/reflex-exo/scripts/: sensor_node.py
src/reflex-exo/src/: SPI.cpp  control_node.cpp
src/reflex-exo/src/reflex-exo/: Controller.cpp  SPI.cpp
src/reflex-ros2/: CMakeLists.txt  package.xml
src/reflex-ros2/reflex-ros2/: sensor_module.py
src/reflex-ros2/scripts/: sensor_node.py
src/reflex-ros2/src/: control_node.cpp
src/reflex-ros2/utils/: can_rpi.py
src/reflex_readings_py/: setup.cfg  setup.py
src/reflex_readings_py/utils/: can_rpi.py
